--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -50,7 +50,7 @@
           <kr.puzi.puzi.ui.customview.RobotoTextView
             android:id="@+id/tv_companyName"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:fontFamily="sans-serif-medium"
             android:textStyle="normal"
             android:textColor="#333333"
@@ -62,7 +62,7 @@
             app:fontWeight="regular"
             android:id="@+id/tv_companyComment"
             android:gravity="center"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="#6d6d6d"
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
@@ -74,7 +74,7 @@
             android:layout_height="22dp"
             android:gravity="center"
             android:text="애독하기"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="#ff2470"
             android:layout_marginBottom="14dp"
             android:layout_gravity="center_horizontal"
@@ -141,7 +141,7 @@
           android:gravity="center"
           android:layout_marginLeft="3dp"
           android:layout_width="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#333333"
           android:visibility="invisible"
           android:layout_height="match_parent"/>
