--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
       android:gravity="center"
       android:text="설정"
       android:textColor="#333333"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
 
@@ -46,7 +46,7 @@
           android:gravity="center_vertical"
           android:layout_marginRight="2.6dp"
           android:layout_gravity="center_vertical"
-          android:textSize="25sp"
+          android:textSize="25dp"
           android:textColor="#000000"
           android:text="0P"
           android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="0P"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6D6D6D"/>
         
       </LinearLayout>
@@ -111,7 +111,7 @@
         <kr.puzi.puzi.ui.customview.RobotoTextView
           android:id="@+id/tv_main_saving"
           android:layout_gravity="center_vertical"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:layout_marginRight="10dp"
           android:textColor="@color/colorWhite"
           android:text="100P"
