--- a/app/src/main/res/layout/activity_store_saving_detail_mine.xml
+++ b/app/src/main/res/layout/activity_store_saving_detail_mine.xml
@@ -39,7 +39,7 @@
             android:text="나의 푸지적금"
             app:fontWeight="medium"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textColor="#333333"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -84,7 +84,7 @@
               android:layout_gravity="center_horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:textSize="22sp"
+              android:textSize="22dp"
               android:textColor="#333333"
               android:gravity="center_horizontal"
               android:layout_marginTop="17dp"
@@ -112,7 +112,7 @@
             app:fontWeight="bold"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#333333"
             android:text="누적 포인트\n"
             android:layout_width="81dp"
@@ -143,7 +143,7 @@
                 app:fontWeight="bold"
                 android:id="@+id/tv_store_saving_mine_point_text"
                 android:textColor="#e27bf1"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:text="300P "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -151,7 +151,7 @@
               <kr.puzi.puzi.ui.customview.NotoTextView
                 app:fontWeight="regular"
                 android:id="@+id/tv_store_saving_mine_point_total_text"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 android:textColor="#666666"
                 android:text="/ 300P"
                 android:layout_width="wrap_content"
@@ -175,7 +175,7 @@
             app:fontWeight="bold"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#333333"
             android:text="나의오늘은\n참여 횟수"
             android:layout_width="81dp"
@@ -206,7 +206,7 @@
                 app:fontWeight="bold"
                 android:id="@+id/tv_store_saving_mine_count_text"
                 android:textColor="#ac3abd"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:text="30회 "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -214,7 +214,7 @@
               <kr.puzi.puzi.ui.customview.NotoTextView
                 app:fontWeight="regular"
                 android:id="@+id/tv_store_saving_mine_count_total_text"
-                android:textSize="13sp"
+                android:textSize="13dp"
                 android:textColor="#666666"
                 android:text="/ 80회"
                 android:layout_width="wrap_content"
@@ -237,7 +237,7 @@
             app:fontWeight="bold"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#333333"
             android:text="하루 적금액"
             android:layout_width="81dp"
@@ -272,7 +272,7 @@
             app:fontWeight="bold"
             android:id="@+id/btn_store_saving_mine_daily_point_update"
             android:text="변경"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorWhite"
             android:background="@drawable/bg_my_saving_update_btn"
             android:layout_gravity="center_vertical"
@@ -296,7 +296,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="regular"
             android:text="- 적금금액은 매일 새벽 1시에 입금되며, 입금된 금액은 사용할 수 없습니다.\n- 하루 적금액 변경은 한번만 가능하오니 신중하게 변경해주세요.\n- 해지시 적금금액은 사용 가능합니다."
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:layout_marginTop="12dp"
             android:layout_marginLeft="17dp"
             android:layout_marginRight="17dp"
@@ -324,7 +324,7 @@
         app:fontWeight="regular"
         android:id="@+id/btn_profile_channel_dropdown_block"
           android:background="@drawable/bg_store_saving"
-          android:textSize="16sp"
+          android:textSize="16dp"
         android:text="해지하기"
         android:textColor="#333333"
         android:layout_width="match_parent"
