--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -42,8 +42,6 @@
       android:background="#CCFFFFFF"
       android:id="@+id/ll_advertise_text"
       android:layout_gravity="bottom"
-      android:paddingTop="13dp"
-      android:paddingBottom="13dp"
       android:paddingLeft="8dp"
       android:layout_width="match_parent"
       android:layout_height="72dp">
@@ -68,6 +66,7 @@
         android:orientation="vertical"
         android:layout_marginLeft="13dp"
         android:layout_gravity="center_vertical"
+          android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
@@ -75,28 +74,30 @@
         android:layout_toEndOf="@+id/iv_companyPicture">
 
         <kr.puzi.puzi.ui.customview.NotoTextView
-          app:fontWeight="medium"
-          android:textSize="18sp"
-          android:textColor="#333333"
-          android:text="광고 타이틀 자리입니다"
+            app:fontWeight="medium"
+            android:textSize="18dp"
+            android:textColor="#333333"
+            android:text="광고 타이틀 자리입니다"
+            android:gravity="center_vertical"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-          android:focusableInTouchMode="true"
-          android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
             android:layout_marginRight="30dp"
-          android:layout_width="match_parent"
-          android:layout_height="27dp"
-          android:id="@+id/tv_advertise"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_advertise"/>
 
         <kr.puzi.puzi.ui.customview.NotoTextView
-          app:fontWeight="regular"
-          android:textSize="16sp"
-          android:textColor="#9B9B9B"
-          android:text="company"
-          android:layout_width="match_parent"
-          android:layout_height="19dp"
-          android:id="@+id/tv_companyId"/>
+            app:fontWeight="regular"
+            android:textSize="16dp"
+            android:textColor="#9B9B9B"
+            android:text="company"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_companyId"/>
 
       </LinearLayout>
 
