--- a/app/src/main/res/layout/fragment_brand.xml
+++ b/app/src/main/res/layout/fragment_brand.xml
@@ -13,7 +13,7 @@
   <TextView
     android:text="TextView"
     android:gravity="center_vertical"
-    android:textSize="15sp"
+    android:textSize="15dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="15dp"
     android:layout_marginBottom="15dp"
