--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -29,7 +29,7 @@
     android:text="이메일로 회원가입"
     android:textColor="#ffffff"
     android:id="@+id/btn_signup"
-    android:textSize="15sp"
+    android:textSize="15dp"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:layout_marginLeft="40dp"
@@ -62,7 +62,7 @@
         app:fontWeight="medium"
         android:text="카카오 계정으로 로그인"
         android:textColor="#3f211e"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -94,7 +94,7 @@
     android:text="로그인"
     android:id="@+id/btn_login"
     android:textColor="#ff2470"
-    android:textSize="15sp"
+    android:textSize="15dp"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:background="@drawable/button_login"
