--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,7 +23,7 @@
     <kr.puzi.puzi.ui.customview.NotoTextView
       app:fontWeight="medium"
       android:text="로그인"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:layout_gravity="center"
       android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
       android:textColorHint="@color/colorGray"
       android:inputType="textUri"
       android:textColor="@color/colorGray"
-      android:textSize="13.5sp"/>
+      android:textSize="13.5dp"/>
 
     <kr.puzi.puzi.ui.customview.NotoEditText
       app:fontWeight="regular"
@@ -80,7 +80,7 @@
       android:inputType="textPassword"
       android:text=""
       android:textColor="@color/colorGray"
-      android:textSize="13.5sp"/>
+      android:textSize="13.5dp"/>
 
     <kr.puzi.puzi.ui.customview.NotoButton
       app:fontWeight="bold"
@@ -95,7 +95,7 @@
       android:padding="0dp"
       android:ems="10"
       android:text="로그인"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:textColor="@color/colorWhite"
       android:background="@drawable/button_puzi"/>
 
@@ -111,7 +111,7 @@
       <kr.puzi.puzi.ui.customview.NotoButton
         android:layout_width="79dp"
         android:layout_height="match_parent"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#6d6d6d"
         android:id="@+id/btn_srch_id"
         android:background="@null"
@@ -131,7 +131,7 @@
       <kr.puzi.puzi.ui.customview.NotoButton
         android:layout_width="93dp"
         android:layout_height="match_parent"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#6d6d6d"
         android:id="@+id/btn_srch_pw"
         android:background="@null"
