--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -33,7 +33,7 @@
       <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="bold"
           android:text="나의 고민은"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#333333"
           android:gravity="center"
           android:layout_width="wrap_content"
@@ -106,7 +106,7 @@
             <kr.puzi.puzi.ui.customview.NotoTextView
                 android:layout_gravity="center_vertical"
                 app:fontWeight="demilight"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="#6d6d6d"
                 android:text="더보기"
                 android:layout_width="wrap_content"
