--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -30,7 +30,7 @@
           android:layout_marginLeft="16dp"
           android:layout_marginTop="18dp"
           android:text="사용자 설정"
-          android:textSize="14sp"
+          android:textSize="14dp"
           android:textColor="#6d6d6d"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -53,7 +53,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="계정 설정"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
@@ -96,7 +96,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="관심사 설정"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -139,7 +139,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="알람시간 제한 설정"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -181,7 +181,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="수신거부 관리"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
@@ -224,7 +224,7 @@
           android:layout_marginLeft="16dp"
           android:layout_marginTop="18dp"
           android:text="기타"
-          android:textSize="14sp"
+          android:textSize="14dp"
           android:textColor="#6d6d6d"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -247,7 +247,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="공지사항"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -289,7 +289,7 @@
           android:layout_marginLeft="16dp"
           android:text="고객센터"
           android:textColor="#333333"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
           android:layout_width="wrap_content"
@@ -332,7 +332,7 @@
           android:layout_marginLeft="16dp"
           android:text="버전정보"
           android:textColor="#333333"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
           android:layout_width="wrap_content"
@@ -363,7 +363,7 @@
           android:layout_marginRight="16dp"
           android:text="v1.0.0"
           android:textColor="#333333"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:layout_toLeftOf="@+id/iv_setting_version"
           android:layout_gravity="center_vertical|right"
           android:layout_centerVertical="true"
