--- a/app/src/main/res/layout/fragment_setting_cs_using.xml
+++ b/app/src/main/res/layout/fragment_setting_cs_using.xml
@@ -24,7 +24,7 @@
       app:fontWeight="medium"
       android:text="서비스 이용약관"
       android:textColor="@color/colorBlack"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
@@ -51,7 +51,7 @@
         android:text="@string/string_use"
         app:fontWeight="regular"
         android:textColor="#333333"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
