--- a/app/src/main/res/layout/fragment_setting_detail.xml
+++ b/app/src/main/res/layout/fragment_setting_detail.xml
@@ -21,7 +21,7 @@
 
     <kr.puzi.puzi.ui.customview.NotoTextView
       app:fontWeight="regular"
-      android:textSize="18sp"
+      android:textSize="18dp"
       android:textColor="#333333"
       android:id="@+id/tv_setting_title"
       android:layout_gravity="center"
