--- a/app/src/main/res/layout/fragment_setting_favorites.xml
+++ b/app/src/main/res/layout/fragment_setting_favorites.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:gravity="left"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="@color/colorBlack"
         android:text="관심분야"/>
 
@@ -122,7 +122,7 @@
             android:background="@drawable/button_favorite_off"
             android:id="@+id/btn_setting_finance"
             android:text="금융\n(보험,제테크)"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
@@ -142,7 +142,7 @@
             android:background="@drawable/button_favorite_off"
             android:id="@+id/btn_setting_culture"
             android:text="문화\n(콘서트,공연)"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
@@ -154,7 +154,7 @@
             app:fontWeight="regular"
             android:visibility="invisible"
             android:background="@drawable/button_favorite_off"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
