--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -24,7 +24,7 @@
       app:fontWeight="medium"
       android:text="회원가입"
       android:textColor="@color/colorBlack"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
@@ -58,7 +58,7 @@
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:layout_marginBottom="8dp"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="아이디"
           android:gravity="left" />
@@ -68,7 +68,7 @@
           android:background="@drawable/edittext"
           android:layout_width="match_parent"
           android:layout_height="54dp"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:id="@+id/edt_signup_id"
           android:inputType="textUri"
           android:hint="아이디를 입력하세요."
@@ -84,7 +84,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="5dp"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:textColor="#333333"
           android:text="6-15자 사이로 입력해주세요"
           android:gravity="left" />
@@ -104,7 +104,7 @@
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:layout_marginBottom="8dp"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="이메일"
           android:gravity="left" />
@@ -114,7 +114,7 @@
           android:background="@drawable/edittext"
           android:layout_width="match_parent"
           android:layout_height="54dp"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:id="@+id/edt_signup_email"
           android:textColorHint="#6D6D6D"
           android:hint="이메일 주소를 입력하세요."
@@ -140,7 +140,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginBottom="8dp"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="비밀번호"
           android:gravity="left" />
@@ -150,7 +150,7 @@
           android:background="@drawable/edittext"
           android:layout_width="match_parent"
           android:layout_height="54dp"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:id="@+id/edt_signup_pw"
           android:textColorHint="#6D6D6D"
           android:hint="비밀번호를 입력하세요"
@@ -166,7 +166,7 @@
           android:background="@drawable/edittext"
           android:layout_width="match_parent"
           android:layout_height="54dp"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:id="@+id/edt_signup_repw"
           android:textColorHint="#6D6D6D"
           android:hint="비밀번호를 다시 입력하세요"
@@ -183,7 +183,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="5dp"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:textColor="#333333"
           android:text="8-15자 이내, 숫자와 영문으로 조합해주세요."
           android:gravity="left" />
@@ -206,7 +206,7 @@
           android:layout_height="54dp"
           android:id="@+id/btn_signup_next"
           android:background="@drawable/button_puzi"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:text="다음 단계"
           android:textColor="@color/colorWhite"/>
 
