--- a/app/src/main/res/layout/item_array_text.xml
+++ b/app/src/main/res/layout/item_array_text.xml
@@ -13,7 +13,7 @@
     android:layout_marginBottom="7dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="16sp"
+    android:textSize="16dp"
     android:textColor="#6d6d6d"
     android:id="@+id/tv_item_array_text"/>
 </LinearLayout>
