--- a/app/src/main/res/layout/item_block_time.xml
+++ b/app/src/main/res/layout/item_block_time.xml
@@ -17,7 +17,7 @@
       android:layout_gravity="center_vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:textSize="28sp"
+      android:textSize="28dp"
       android:textColor="#333333"
       android:id="@+id/tv_block_time"
       android:layout_weight="1"/>
