--- a/app/src/main/res/layout/item_channel_detail_editors_page.xml
+++ b/app/src/main/res/layout/item_channel_detail_editors_page.xml
@@ -27,7 +27,7 @@
     android:layout_marginTop="8dp"
     android:maxLines="1"
     android:ellipsize="end"
-    android:textSize="15sp"
+    android:textSize="15dp"
     android:textColor="#35343d"
     android:id="@+id/tv_item_channel_detail_editors_page_title"/>
 
@@ -37,7 +37,7 @@
     android:layout_width="176dp"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
-    android:textSize="13sp"
+    android:textSize="13dp"
     android:textColor="#6d6d6d"
     android:id="@+id/tv_item_channel_detail_editors_page_name"/>
 
