--- a/app/src/main/res/layout/item_channel_detail_reply.xml
+++ b/app/src/main/res/layout/item_channel_detail_reply.xml
@@ -17,7 +17,7 @@
       android:layout_height="wrap_content"
       android:layout_marginLeft="16dp"
       android:layout_marginTop="17.5dp"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:fontFamily="sans-serif"
       android:textStyle="bold"
       android:textColor="#35343d"
