--- a/app/src/main/res/layout/item_myworry_write_price.xml
+++ b/app/src/main/res/layout/item_myworry_write_price.xml
@@ -15,7 +15,7 @@
       android:id="@+id/tv_item_myworry_write_title"
       app:fontWeight="regular"
       android:text="저가형"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:paddingTop="8dp"
       android:gravity="center_horizontal"
       android:textColor="#bbbbbb"
@@ -26,7 +26,7 @@
       android:id="@+id/tv_item_myworry_write_price"
       app:fontWeight="regular"
       android:text="포인트답변수"
-      android:textSize="12sp"
+      android:textSize="12dp"
       android:gravity="center_horizontal"
       android:textColor="#bbbbbb"
       android:layout_width="match_parent"
