--- a/app/src/main/res/layout/item_myworry_write_price_selected.xml
+++ b/app/src/main/res/layout/item_myworry_write_price_selected.xml
@@ -15,7 +15,7 @@
       android:id="@+id/tv_item_myworry_write_title"
       app:fontWeight="regular"
       android:text="저가형"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:paddingTop="8dp"
       android:gravity="center_horizontal"
       android:textColor="#ff2470"
