--- a/app/src/main/res/layout/item_question_end.xml
+++ b/app/src/main/res/layout/item_question_end.xml
@@ -38,7 +38,7 @@
                 <kr.puzi.puzi.ui.customview.NotoTextView
                     app:fontWeight="medium"
                     android:text="나의 오늘은"
-                    android:textSize="13sp"
+                    android:textSize="13dp"
                     android:textColor="@color/colorWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
