--- a/app/src/main/res/layout/item_setting_block_time.xml
+++ b/app/src/main/res/layout/item_setting_block_time.xml
@@ -5,5 +5,5 @@
           android:layout_marginLeft="7dp"
           android:layout_marginTop="7dp"
           android:layout_marginBottom="7dp"
-          android:textSize="28sp"
+          android:textSize="28dp"
           android:textColor="#dadada"/>
