--- a/app/src/main/res/layout/item_spinner_normal.xml
+++ b/app/src/main/res/layout/item_spinner_normal.xml
@@ -16,7 +16,7 @@
       android:layout_weight="0.9"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:textSize="10sp"
+      android:textSize="10dp"
       android:textColor="#6d6d6d"/>
 
   <ImageView
