--- a/app/src/main/res/layout/item_store_item.xml
+++ b/app/src/main/res/layout/item_store_item.xml
@@ -30,7 +30,7 @@
       android:layout_weight="1"
       android:layout_marginStart="9dp"
       android:layout_marginEnd="9dp"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:textColor="#333333"
       android:id="@+id/tv_store_item_name"/>
 
@@ -41,7 +41,7 @@
       android:layout_gravity="right"
       android:layout_marginBottom="12dp"
       android:layout_marginRight="10dp"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:fontFamily="sans-serif-medium"
       android:textStyle="normal"
       android:textColor="#333333"
